# fastapi_assignment

./: README.md  pyproject.toml
fast_api_app/: main.py
fast_api_app/controllers/: addition_controller.py
fast_api_app/models/: addition_models.py
fast_api_app/services/: addition_service.py
tests/: test_addition.py  test_addition_controller.py  test_main.py  test_service.py
