[tool.poetry]
name = "fastapi-multiprocessing-demo"
version = "0.1.0"
description = "FastAPI project with multiprocessing for addition"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
pydantic = "^1.9.0"
uvicorn = "^0.21.1"
coverage = "^7.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
